name:           critbit
version:        0.1.0.0
homepage:       https://github.com/bos/critbit
bug-reports:    https://github.com/bos/critbit/issues
synopsis:       Crit-bit maps and sets
description:
    This package implements crit-bit trees, a key-value container type
    for storing keys that can be treated as bitstrings (e.g.
    'ByteString' and 'Text').
    .
    Compared to the data structures from the containers and
    unordered-containers packages, you will find that sometimes the
    functions implemented in this package are faster, sometimes
    slower.
    .
    In many cases, a 'CritBit' tree provides performance close to that
    of a 'HashMap', while providing ordered storage and traversal
    like a 'Map'.
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
copyright:      2013-2014 Bryan O'Sullivan and others
category:       Data
build-type:     Simple
cabal-version:  >= 1.14
extra-source-files:
    README.markdown

flag developer
  description: operate in developer mode
  default: False

library
  default-language: Haskell2010
  exposed-modules:
    Data.CritBit.Map.Lazy
    Data.CritBit.Set
  other-modules:
    Data.CritBit.Core
    Data.CritBit.Types.Internal
    Data.CritBit.Tree

  build-depends:
    array,
    base >= 4 && < 5,
    bytestring >= 0.9,
    deepseq,
    text >= 0.11.2.3,
    vector

  ghc-options: -Wall -funbox-strict-fields -O2 -fwarn-tabs
  if flag(developer)
    ghc-prof-options: -auto-all
    ghc-options: -Werror
    cpp-options: -DASSERTS

test-suite tests
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  if impl(ghc >= 7.4)
    other-modules:
      Properties.Common
      Properties.Map
      Properties.Set

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    QuickCheck >= 2.7,
    base >= 4 && < 5,
    bytestring,
    containers,
    critbit,
    test-framework >= 0.4,
    test-framework-quickcheck2 >= 0.2,
    text,
    transformers >= 0.3,
    vector

benchmark benchmarks
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Benchmarks.hs
  ghc-options:    -O2 -rtsopts

  build-depends:
    base >= 4 && < 5,
    bytestring,
    bytestring-trie,
    containers,
    critbit,
    criterion >= 0.8,
    deepseq,
    hashable < 1.2,
    mtl,
    mwc-random,
    text,
    transformers >= 0.3,
    unordered-containers,
    vector

source-repository head
  type:     git
  location: https://github.com/bos/critbit

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/critbit
